Bug 532349: Support new cmap table ID used in Chinese fonts on OS X 10.6. r=jdaggett